added user another handlers and documentation
